--- a/cnh-projeto/index.html
+++ b/cnh-projeto/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title> CNH Sem Barreiras</title>
+    <link rel="icon" type="image/svg+xml" href="https://avatars.githubusercontent.com/u/96799992?s=400&u=7d572b78c63965a9913baaa5f548e49fbe2a1406&v=4" >
   </head>
   <body>
     <div id="root"></div>
